--- a/appstate.json
+++ b/appstate.json
@@ -1,48 +1,30 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%22100094196693539%22%3A%22CGEu1UTy%22%2C%2261554236400769%22%3A%22u0CWxtu2%22%2C%2261567632540715%22%3A%22opGXEGCs%22%2C%2261567751309015%22%3A%225DPaFxnr%22%2C%2261566408789854%22%3A%226N6JOEni%22%2C%2261568143521183%22%3A%22HvwrEIIL%22%2C%2261568094563941%22%3A%22B9MpnlKW%22%2C%2261567628797281%22%3A%22RyLivQPH%22%2C%2261567561003603%22%3A%22DXFaQ1Yd%22%2C%22100083550932309%22%3A%22kvND4OwM%22%2C%2261567269647418%22%3A%22JI43pZv3%22%2C%2261568018042883%22%3A%22IIoM55Ws%22%2C%2261566479789589%22%3A%22IBKMSboM%22%2C%2261568180701505%22%3A%22TBydFgbh%22%2C%2261568513151116%22%3A%22I4Scxnyu%22%2C%2261566411242730%22%3A%22Dkx5Qahd%22%2C%22100086033644262%22%3A%22eTBn9aKw%22%7D",
+        "value": "%7B%2261567093856574%22%3A%22NZ1uiTp8%22%2C%22100094196693539%22%3A%22JMhiXJmn%22%2C%2261569027718897%22%3A%22VsC9YQGI%22%2C%2261566479789589%22%3A%220C0H8WuT%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
-    },
-    {
-        "key": "sb",
-        "value": "A2oRZyAvm0TOpbjLaqQlVcew",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
         "key": "datr",
-        "value": "NnYjZ7xQKo1gkCSdIkL6Eq2i",
+        "value": "LVQXZwTGfDrbUIKU2zPgJ1CM",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
-        "key": "ps_l",
-        "value": "1",
+        "key": "sb",
+        "value": "LVQXZ1AMyqvAc45MfXPSP9PI",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
-    },
-    {
-        "key": "ps_n",
-        "value": "1",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
         "key": "vpd",
@@ -50,26 +32,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
-        "key": "oo",
-        "value": "v1",
+        "key": "ps_l",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
-        "key": "locale",
-        "value": "en_GB",
+        "key": "ps_n",
+        "value": "1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
         "key": "m_pixel_ratio",
@@ -77,8 +59,44 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
+    },
+    {
+        "key": "x-referer",
+        "value": "eyJyIjoiL2hvbWUucGhwIiwiaCI6Ii9ob21lLnBocCIsInMiOiJtIn0%3D",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61566479789589",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
+    },
+    {
+        "key": "fr",
+        "value": "0PonTd4wkSA8zjLYg.AWWWMrnA-rvWXAKu_HM3VGEvjWM.BnF1Qt..AAA.0.0.BnS1rl.AWWy-jYM_bI",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
+    },
+    {
+        "key": "xs",
+        "value": "36%3AgZuRYFGa7Fpx6g%3A2%3A1732991718%3A-1%3A12257",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
         "key": "wd",
@@ -86,52 +104,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
-        "key": "c_user",
-        "value": "61566411242730",
+        "key": "locale",
+        "value": "en_GB",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
-    },
-    {
-        "key": "fr",
-        "value": "01imxjEbUWoLj49rX.AWWSccHFq3JWi3gkrK7N2J-z3cI.BnKehi..AAA.0.0.BnS1hH.AWVsWBzNZvQ",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
-    },
-    {
-        "key": "xs",
-        "value": "41%3AigxXQSfB2d4jWQ%3A2%3A1732991047%3A-1%3A13347",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
         "key": "fbl_st",
-        "value": "101531717%3BT%3A28883184",
+        "value": "100732706%3BT%3A28883195",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2682%3Btimestamp%3A1732991049",
+        "value": "v2%3Bclient_version%3A2682%3Btimestamp%3A1732991725",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2024-11-30T18:24:15.695Z",
-        "lastAccessed": "2024-11-30T18:24:15.695Z"
+        "creation": "2024-11-30T18:35:35.767Z",
+        "lastAccessed": "2024-11-30T18:35:35.767Z"
     }
 ]
